Basic homepage layout

--- a/index.html
+++ b/index.html
@@ -14,7 +14,52 @@
 </head>
 
 <body>
+    <div class="container">
+        <ul class="nav">
+            <li class="nav-item">
+                <a href="#" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item">
+                <a href="browse-projects.html" class="nav-link">Browse Projects</a>
+            </li>
+            <li class="nav-item">
+                <a href="browse-creators.html" class="nav-link">Browse Creators</a>
+            </li>
+        </ul>
+    </div>
+    <div id="body_div" class="container text-center">
+        <div class="row">
+            <div class="col border overflow-hidden">
+                <h1>Featured Works</h1>
+                <div class="row row-cols-sm-3 row-cols-md-3 row-cols-lg-3">
+                    <div class="card shadow-sm">
+                        Card 1
+                    </div>
+                    <div class="card shadow-sm">
+                        Card 2
+                    </div>
+                    <div class="card shadow-sm">
+                        Card 3
+                    </div>
+                </div>
 
+                <div class="p-3"></div>
+
+                <h1>Featured Creators</h1>
+                <div class="row row-cols-sm-2 row-cols-md-3 row-cols-lg-3">
+                    <div class="card shadow-sm p-3">
+                        Card 1
+                    </div>
+                    <div class="card shadow-sm p-3">
+                        Card 2
+                    </div>
+                    <div class="card shadow-sm p-3">
+                        Card 3
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
