--- a/creator.html
+++ b/creator.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Creator Profile Page/title>
 </head>
 <body>
+    <h1>Creator Profile Page</h1>
     
 </body>
 </html>
