--- a/browse-projects.html
+++ b/browse-projects.html
@@ -7,12 +7,29 @@
     <title>Browse Projects</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="custom.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <div class="container navHeader">
+        <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+          <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+            <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
+            <span class="fs-4">Kwibi</span>
+          </a>
+    
+          <ul class="nav nav-pills">
+            <li class="nav-item"><a href="./index.html" class="nav-link" aria-current="page">Home</a></li>
+            <li class="nav-item"><a href="./browse-creators.html" class="nav-link">Creators</a></li>
+            <li class="nav-item"><a href="./browse-projects.html" class="nav-link">Projects</a></li>
+            <li class="nav-item"><a href="./about.html" class="nav-link">About</a></li>
+          </ul>
+        </header>
+      </div>
+
     <div class="container text-center">
         <div class="row">
             <div class="col">
