Added data to json files and added some css

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
         <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
           <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
             <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
-            <span class="fs-4">Kwibi</span>
+            <span><img src="./images/kwibi_icon.png" width="100"></span>
           </a>
     
           <ul class="nav nav-pills">
@@ -51,7 +51,7 @@
 
       <div class="container">
         <h2 align="center">About The Developers</h2>
-        <h4 align="center">SE/COMS 319 Construction of User Interfaces</h4>
+        <h4 class="className" align="center">SE/COMS 319 Construction of User Interfaces</h4>
 
         <div class="row aboutRow">
             <div class="col imgTest" width="100">
@@ -65,7 +65,7 @@
 
             <div class="col imgTest" width="100">
                 <h3 align="center">Thanh Johnson</h3>
-                <img src="./images/testimg1.jpeg" alt="sunset" width="500">
+                <img src="./images/thanh.jpg" alt="Thanh" width="500">
                 <p class="aboutText">Thanh Johnson is a non-traditional student with a background in business management who is currently in her second year of 
                    Computer Science at Iowa State University. Thanh has previously worked with front-end technologies and is 
                    is taking COM S 319 to better understand UI/UX and to learn backend development.</p>
