--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <link rel="shortcut icon" type="image/x-icon" href="./images/icon.jpg" />
 
 </head>
 
@@ -19,7 +20,8 @@
         <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
           <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
             <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
-            <span class="fs-4">Kwibi</span>
+            <!--<span class="fs-4">Kwibi</span>-->
+            <span><img src="./images/kwibi_icon.png" width="100"></span>
           </a>
     
           <ul class="nav nav-pills">
@@ -36,14 +38,17 @@
             <div class="col border overflow-hidden">
                 <h1>Featured Works</h1>
                 <div class="row row-cols-sm-1 row-cols-md-1 row-cols-lg-3">
-                    <div class="card shadow-sm">
-                        Card 1
+                    <div class="card shadow-sm projectCard">
+                        <img src="./images/mm1.jpg" alt="cat popsocket">
+                        <h3>Mango Kitty Popsocket</h3>
                     </div>
-                    <div class="card shadow-sm">
-                        Card 2
+                    <div class="card shadow-sm projectCard">
+                        <img src="./images/odo1.jpg" alt="cute tshirt">
+                        <h3>Angry Bear Cafe Shirt</h3>
                     </div>
-                    <div class="card shadow-sm">
-                        Card 3
+                    <div class="card shadow-sm projectCard">
+                        <img src="./images/neko1.png" alt="tumblrs">
+                        <h3>Customized Holo Tumblrs</h3>
                     </div>
                 </div>
 
@@ -51,14 +56,17 @@
 
                 <h1>Featured Creators</h1>
                 <div class="row row-cols-sm-1 row-cols-md-1 row-cols-lg-3">
-                    <div class="card shadow-sm p-3">
-                        Card 1
+                    <div class="card shadow-sm p-3 projectCard">
+                        <img src="./images/odo.jpg" alt="Odo Studios">
+                        <h3>Odo Studios</h3>
                     </div>
-                    <div class="card shadow-sm p-3">
-                        Card 2
+                    <div class="card shadow-sm p-3 projectCard">
+                        <img src="./images/mangomousse.jpg" alt="Mango Mousse">
+                        <h3>Mango Mousse</h3>
                     </div>
-                    <div class="card shadow-sm p-3">
-                        Card 3
+                    <div class="card shadow-sm p-3 projectCard">
+                        <img src="./images/nekomataco.jpg" alt="Odo Studios">
+                        <h3>Nekomata Co</h3>
                     </div>
                 </div>
             </div>
