Added personal photo

--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
         <div class="row aboutRow">
             <div class="col imgTest" width="100">
                 <h3 align="center">Nathan Giddings</h3>
-                <img src="./images/testimg1.jpeg" alt="sunset" width="500px">
+                <img src="./images/nathan.jpg" alt="sunset" width="500px">
                 <p class="aboutText">Nathan Giddings is currently a senior studying Computer Science at Iowa State University. 
                    Nathan specializes in backend technologies with working experience in scripting in JavaScript. 
                    Nathan is taking COM S 319 to further his understanding of user interfaces and front-end development.</p>
