Fixed mailto link

--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
                 <p class="aboutText">Nathan Giddings is currently a senior studying Computer Science at Iowa State University. 
                    Nathan specializes in backend technologies with working experience in scripting in JavaScript. 
                    Nathan is taking COM S 319 to further his understanding of user interfaces and front-end development.</p>
-                <p class="contact">Contact: <a href="mailto:johnsot@iastate.edu">npg@iastate.edu</a></p>
+                <p class="contact">Contact: <a href="mailto:npg@iastate.edu">npg@iastate.edu</a></p>
             </div>
 
             <div class="col imgTest" width="100">
