adding date and sem

--- a/about.html
+++ b/about.html
@@ -51,7 +51,8 @@
 
       <div class="container">
         <h2 align="center">About The Developers</h2>
-        <h4 class="className" align="center">SE/COMS 319 Construction of User Interfaces</h4>
+        <h4 class="className" align="center">SE/COMS 319 Construction of User Interfaces - Spring 2024</h4>
+        <h5 align="center"> March, 7 2024 </h5>
 
         <div class="row aboutRow">
             <div class="col imgTest" width="100">
